--- a/src/elt_dbt/models/staging/client_hooli/_stg_client_hooli__models.yml
+++ b/src/elt_dbt/models/staging/client_hooli/_stg_client_hooli__models.yml
@@ -1,6 +1,59 @@
 ---
 version: 2
 models:
+  - name: stg_client_hooli__stacked_claims
+    description: '{{ doc("view_stg_client_hooli__stacked_claims") }}'
+    columns:
+      - name: claim_category
+        description: '{{ doc("column_claim_category") }}'
+        data_type: varchar
+      - name: member_id
+        description: '{{ doc("column_member_id") }}'
+        data_type: int
+      - name: claim_number
+        description: '{{ doc("column_claim_number") }}'
+        data_type: varchar
+      - name: date_received
+        description: '{{ doc("column_date_received") }}'
+        data_type: date
+      - name: hospital_service
+        description: '{{ doc("column_hospital_service") }}'
+        data_type: varchar
+      - name: code_system
+        description: '{{ doc("column_coding_system") }}'
+        data_type: varchar
+      - name: code
+        description: '{{ doc("column_coding_system") }}'
+        data_type: varchar
+      - name: diagnosis_type
+        description: '{{ doc("column_primary_diagnosis") }}'
+        data_type: varchar
+      - name: cost_total
+        description: '{{ doc("column_total_billed") }}'
+        data_type: decimal(20, 10)
+      - name: status
+        description: '{{ doc("column_processing_status") }}'
+        data_type: varchar
+      - name: client_name
+        description: '{{ doc("column_client_name") }}'
+      - name: client_id
+        description: '{{ doc("column_client_id") }}'
+        data_type: varchar
+      - name: internal_filename
+        description: '{{ doc("column_internal_filename") }}'
+        data_type: varchar
+      - name: external_filename
+        description: '{{ doc("column_external_filename") }}'
+        data_type: varchar
+      - name: created_on
+        description: '{{ doc("column_created_on") }}'
+        data_type: timestamp with time zone
+      - name: modified_on
+        description: '{{ doc("column_modified_on") }}'
+        data_type: timestamp with time zone
+      - name: relation_name
+        description: '{{ doc("column_relation_name") }}'
+        data_type: varchar
   - name: stg_client_hooli__stacked_members
     description: '{{ doc("view_stg_client_hooli__stacked_members") }}'
     columns:
