feature/init_dbt: Create intermediate model for client hooli

--- a/src/elt_dbt/dbt_project.yml
+++ b/src/elt_dbt/dbt_project.yml
@@ -35,6 +35,10 @@ models:
     staging:
       client_acme:
         +schema: stg_client_acme
+      client_hooli:
+        +schema: stg_client_hooli
     intermediate:
       client_acme:
-          +schema: int_client_acme
+        +schema: int_client_acme
+      client_hooli:
+        +schema: int_client_hooli
