--- a/src/elt_dbt/models/staging/client_hooli/_stg_client_hooli__models.yml
+++ b/src/elt_dbt/models/staging/client_hooli/_stg_client_hooli__models.yml
@@ -9,7 +9,7 @@ models:
         data_type: varchar
       - name: member_id
         description: '{{ doc("column_member_id") }}'
-        data_type: int
+        data_type: varchar
       - name: claim_number
         description: '{{ doc("column_claim_number") }}'
         data_type: varchar
@@ -57,50 +57,47 @@ models:
   - name: stg_client_hooli__stacked_members
     description: '{{ doc("view_stg_client_hooli__stacked_members") }}'
     columns:
-      - name: member_id
-        description: '{{ doc("column_member_id") }}'
-        data_type: int
-      - name: client_id
-        description: '{{ doc("column_client_id") }}'
-        data_type: int
       - name: eligibility_date
         description: '{{ doc("column_eligibility_date") }}'
         data_type: date
-      - name: member_first_name
-        description: '{{ doc("column_member_first_name") }}'
+      - name: member_id
+        description: '{{ doc("column_member_id") }}'
         data_type: varchar
-      - name: member_middle_name
-        description: '{{ doc("column_member_middle_name") }}'
-        data_type: varchar
-      - name: member_last_name
-        description: '{{ doc("column_member_last_name") }}'
-        data_type: varchar
-      - name: gender
-        description: '{{ doc("column_gender") }}'
+      - name: member_fullname
+        description: '{{ doc("column_member_fullname") }}'
         data_type: varchar
       - name: date_of_birth
         description: '{{ doc("column_date_of_birth") }}'
         data_type: date
-      - name: address
-        description: '{{ doc("column_address") }}'
+      - name: age_in_mths_no
+        description: '{{ doc("column_age_in_mths_no") }}'
+        data_type: int
+      - name: gender
+        description: '{{ doc("column_gender") }}'
         data_type: varchar
-      - name: city
+      - name: member_address_1
+        description: '{{ doc("column_member_address_1") }}'
+        data_type: varchar
+      - name: member_address_2
+        description: '{{ doc("column_member_address_2") }}'
+        data_type: varchar
+      - name: member_city
         description: '{{ doc("column_city") }}'
         data_type: varchar
-      - name: state
+      - name: member_state
         description: '{{ doc("column_state") }}'
         data_type: varchar
-      - name: zip
+      - name: member_zip
         description: '{{ doc("column_zip") }}'
         data_type: varchar
-      - name: phone_number
+      - name: member_phone
         description: '{{ doc("column_phone_number") }}'
-        data_type: varchar
-      - name: ethnicity
-        description: '{{ doc("column_ethnicity") }}'
         data_type: varchar
       - name: client_name
         description: '{{ doc("column_client_name") }}'
+        data_type: varchar
+      - name: client_id
+        description: '{{ doc("column_client_id") }}'
         data_type: varchar
       - name: internal_filename
         description: '{{ doc("column_internal_filename") }}'
@@ -110,10 +107,7 @@ models:
         data_type: varchar
       - name: created_on
         description: '{{ doc("column_created_on") }}'
-        data_type: timestamp with time zone
+        data_type: varchar
       - name: modified_on
         description: '{{ doc("column_modified_on") }}'
-        data_type: timestamp with time zone
-      - name: relation_name
-        description: '{{ doc("column_relation_name") }}'
         data_type: varchar
