feature/init_dbt: Add dbt secrets to github repo secrets manager

--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -19,6 +19,14 @@ env:
   COMPOSE_POSTGRES_PYTHON_PASSWORD: ${{ secrets.COMPOSE_POSTGRES_PYTHON_PASSWORD }}
   COMPOSE_POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING: ${{ secrets.COMPOSE_POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING }}
   COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT: ${{ secrets.COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT }}
+  COMPOSE_DBT_POSTGRES_USER: ${{ secrets.COMPOSE_DBT_POSTGRES_USER }}
+  COMPOSE_DBT_POSTGRES_PASSWORD: ${{ secrets.COMPOSE_DBT_POSTGRES_PASSWORD }}
+  COMPOSE_DBT_POSTGRES_SCHEMA: ${{ secrets.COMPOSE_DBT_POSTGRES_SCHEMA }}
+  COMPOSE_DBT_POSTGRES_CONNECTION_LIMIT: ${{ secrets.COMPOSE_DBT_POSTGRES_CONNECTION_LIMIT }}
+  COMPOSE_DBT_POSTGRES_READ_ROLE: ${{ secrets.COMPOSE_DBT_POSTGRES_READ_ROLE }}
+  COMPOSE_DBT_POSTGRES_WRITE_ROLE: ${{ secrets.COMPOSE_DBT_POSTGRES_WRITE_ROLE }}
+  COMPOSE_DBT_PROFILES_DIR: ${{ secrets.COMPOSE_DBT_PROFILES_DIR }}
+  COMPOSE_DBT_PROJECT_DIR: ${{ secrets.COMPOSE_DBT_PROJECT_DIR }}
 
 jobs:
   lint_and_test:
